Fix overlapping canvas

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -7,9 +7,11 @@ body {
   padding: 0;
   margin: 0;
   width: 100%;
+  height: 100%;
 }
 
 main {
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -18,7 +20,7 @@ header {
   background: #32333f;
   height: 100px;
   border-bottom: 2px solid black;
-
+  margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
 }
@@ -70,18 +72,15 @@ header ul li:hover img{
 
 
 canvas {
-  /*margin: auto;
-  width: 1280px;
-  height: 720px;*/
-
-  padding: 0;
+  margin: auto;
+  /*padding: 0;
   margin: auto;
   display: block;
   position: absolute;
   top: 50px;
   bottom: 0;
   left: 0;
-  right: 0;
+  right: 0;*/
 
   background: #bbbfbf;
   border: 1px solid black;
